--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="https://kit.fontawesome.com/9576e2cc08.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -23,5 +24,10 @@
     <link rel="stylesheet" href="/styles/portfolio.css" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <div class="d-flex bg-warning">
+      <h1>Hello world</h1>
+      <p>Hi there</p>
+      <i class="fa-brands fa-instagram"></i>
+  </body>
 </html>
