--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="https://kit.fontawesome.com/9576e2cc08.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/9576e2cc08.js"
+      crossorigin="anonymous"
+    ></script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -25,9 +28,13 @@
     <title>Document</title>
   </head>
   <body>
-    <div class="d-flex bg-warning">
-      <h1>Hello world</h1>
-      <p>Hi there</p>
-      <i class="fa-brands fa-instagram"></i>
+    <div class="introduction">
+      <p>👋 Hi, I'm</p>
+      <h1>Mashudu Tshifura</h1>
+      <h2 class="mb-5">Front-end developer based in South Africa</h2>
+      <div>
+        <a href="#" class="btn btn-contact">Contact me</a>
+      </div>
+    </div>
   </body>
 </html>
