--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <div class="container">
       <div class="row mb-5">
         <div class="col d-none d-lg-block">
-          <img src="images/yogurt.png" class="img-fluid" alt="">
+          <img src="images/yogurt.png" class="img-fluid" alt="" />
         </div>
         <div class="col">
           <div class="project-desciption">
@@ -71,12 +71,12 @@
           </div>
         </div>
         <div class="col d-none d-lg-block">
-          <img src="images/weather.png" class="img-fluid" alt="">
+          <img src="images/weather.jpg" class="img-fluid" alt="" />
         </div>
       </div>
       <div class="row">
         <div class="col d-none d-lg-block">
-          <img src="images/dictionary.png" class="img-fluid" alt="">
+          <img src="images/dictionary.png" class="img-fluid" alt="" />
         </div>
         <div class="col">
           <div class="project-desciption">
