created about me page and updated the CSS

--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
     <div class="introduction">
       <p>👋 Hi, I'm</p>
       <h1>Mashudu Tshifura</h1>
-      <h2 class="mb-5">Front-end developer based in South Africa</h2>
+      <h2 class="mb-5">Aspiring Front-end developer based in South Africa</h2>
       <div>
-        <a href="#" class="btn btn-contact">Contact me</a>
+        <a href="#" class="btn btn-brand">Contact me</a>
       </div>
     </div>
     <p class="text-center m-5">
@@ -53,7 +53,7 @@
               they live in Bookmarksgrove right at the coast of the Semantics, a
               large language ocean. A small river named Duden flows by
             </p>
-            <a href="" class="btn btn-branding-outline"> Learn more </a>
+            <a href="" class="btn btn-brand-outline"> Learn more </a>
           </div>
         </div>
       </div>
@@ -67,7 +67,7 @@
               they live in Bookmarksgrove right at the coast of the Semantics, a
               large language ocean. A small river named Duden flows by
             </p>
-            <a href="" class="btn btn-branding-outline"> Learn more </a>
+            <a href="" class="btn btn-brand-outline"> Learn more </a>
           </div>
         </div>
         <div class="col d-none d-lg-block">
@@ -87,7 +87,7 @@
               they live in Bookmarksgrove right at the coast of the Semantics, a
               large language ocean. A small river named Duden flows by
             </p>
-            <a href="" class="btn btn-contact-outline"> Learn more </a>
+            <a href="" class="btn btn-brand-outline"> Learn more </a>
           </div>
         </div>
       </div>
