--- a/about.html
+++ b/about.html
@@ -40,7 +40,7 @@
               For anyone who wants to start learning code, this workshop is very
               interesting. You will be challenged with different exercises, and
               everything is well explained, homework and deadlines are good for
-              keep focus
+              keeping you focused.
             </p>
             <a href="" class="btn btn-brand">See my projects</a>
           </div>
