--- a/about.html
+++ b/about.html
@@ -28,10 +28,10 @@
     <title>Document</title>
   </head>
   <body>
-    <div class="about-page container">
+    <div class="content-page container">
       <div class="row">
         <div class="col-lg-6">
-          <div class="about-page-content">
+          <div class="content">
             <h1 class="mb-4">Hi I am Mashudu Tshifura</h1>
             <h2 class="mb-4">
               Aspiring Frontend Developer, based in South Africa.
