added the contact page

--- a/contact.html
+++ b/contact.html
@@ -29,25 +29,24 @@
   </head>
   <body>
     <div class="content-page container">
-      <div class="row">
-        <div class="col-lg-6">
-          <div class="content">
-            <h1 class="mb-4">Hi I am Mashudu Tshifura</h1>
-            <h2 class="mb-4">
-              Aspiring Frontend Developer, based in South Africa.
-            </h2>
-            <p class="mb-5">
-              For anyone who wants to start learning code, this workshop is very
-              interesting. You will be challenged with different exercises, and
-              everything is well explained, homework and deadlines are good for
-              keeping you focused.
-            </p>
-            <a href="" class="btn btn-brand">See my projects</a>
-          </div>
-        </div>
-        <div class="col-lg-6">
-          <img src="images/mashudu.png" alt="" class="img-fluid" />
-        </div>
+      <div class="content">
+        <h1 class="mb-5">Let's get in touch!</h1>
+        <h3>Email</h3>
+        <p>
+          <a href="mailto:mashudu@gmail.com"> mashudu@gmail.com </a>
+        </p>
+        <h3>Twitter</h3>
+        <p>
+          <a href="https://www.twitter.com/mashudu" target="_blank">
+            @mashudu
+          </a>
+        </p>
+        <h3>Instagram</h3>
+        <p>
+          <a href="https://www.instagram.com/mashudu.codes" target="_blank">
+            @mashudu.codes
+          </a>
+        </p>
       </div>
     </div>
   </body>
