--- a/index.html
+++ b/index.html
@@ -25,31 +25,39 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="/styles/portfolio.css" />
-    <title>Document</title>
+    <meta
+      name="description"
+      content="Mashudu is an aspiring front-end developer based in South Africa."
+    />
+    <title>Aspiring Front-end Developer - Mashudu Tshfura</title>
   </head>
   <body>
     <div class="container">
       <nav class="d-flex justify-content-between">
-        <a href="/">
-          <img src="images/logo.png" class="logo d-none d-md-block" alt="" />
+        <a href="/" title="Homepage">
+          <img
+            src="images/logo.png"
+            class="logo d-none d-md-block"
+            alt="Mashudu Logo"
+          />
           <img
             src="images/logo-small.jpg"
             class="logo d-block d-md-none"
-            alt=""
+            alt="Mashudu Logo"
           />
         </a>
         <ul>
           <li class="active">
-            <a href="/"> Home</a>
+            <a href="/" title="Homepage"> Home</a>
           </li>
           <li>
-            <a href="/about.html"> About</a>
+            <a href="/about.html" title="About Mashudu"> About</a>
           </li>
           <li>
-            <a href="/work.html"> Work</a>
+            <a href="/work.html" title="Mashudu's work"> Work</a>
           </li>
           <li>
-            <a href="/contact.html"> Contact</a>
+            <a href="/contact.html" title="Contact Mashudu"> Contact</a>
           </li>
         </ul>
       </nav>
@@ -59,27 +67,32 @@
       <h1>Mashudu Tshifura</h1>
       <h2 class="mb-5">Aspiring Front-end developer based in South Africa</h2>
       <div>
-        <a href="#" class="btn btn-brand">Contact me</a>
+        <a href="/contact.html" class="btn btn-brand" title="Contact me"
+          >Contact me</a
+        >
       </div>
     </div>
-    <p class="text-center m-5">
-      Featured Project which my best projects be choice to show
-    </p>
+    <p class="text-center m-5">Check my featured projects below</p>
     <div class="container">
       <div class="row mb-5">
         <div class="col d-none d-lg-block">
-          <img src="images/yogurt.png" class="img-fluid" alt="" />
+          <img
+            src="images/yogurt.png"
+            class="img-fluid"
+            alt="Yogurt project preview"
+          />
         </div>
         <div class="col">
           <div class="project-desciption">
             <h2 class="mb-5">Yogurt Project</h2>
             <p class="mb-5 text-muted">
-              Far far away, behind the word mountains, far from the countries
-              Vokalia and Consonantia, there live the blind texts. Separated
-              they live in Bookmarksgrove right at the coast of the Semantics, a
-              large language ocean. A small river named Duden flows by
+              I entered the world of front-end development by gaining some
+              knowledge in HTML, CSS, and JavaScript. I used my knowledge of
+              these languages, along with my new skills in VS Code, to build a
+              landing page about Yogurt. The page utilizes JavaScript functions
+              to create user interaction.
             </p>
-            <a href="" class="btn btn-brand-outline"> Learn more </a>
+            <a href="/work.html" class="btn btn-brand-outline"> Learn more </a>
           </div>
         </div>
       </div>
@@ -88,61 +101,102 @@
           <div class="project-desciption">
             <h2 class="mb-5">Weather App</h2>
             <p class="mb-5 text-muted">
-              Far far away, behind the word mountains, far from the countries
-              Vokalia and Consonantia, there live the blind texts. Separated
-              they live in Bookmarksgrove right at the coast of the Semantics, a
-              large language ocean. A small river named Duden flows by
+              I built a Vanilla JavaScript weather app in SheCodes Plus, an
+              advanced 8-week JavaScript coding workshop. Building upon my
+              previously-gained knowledge, I also became skilled in Bootstrap,
+              API’s, real-life development workflow, hosting, and advanced
+              JavaScript. I combined all of these skills to create a
+              fully-functioning weather app.
             </p>
-            <a href="" class="btn btn-brand-outline"> Learn more </a>
+            <a href="/work.html" class="btn btn-brand-outline"> Learn more </a>
           </div>
         </div>
         <div class="col d-none d-lg-block">
-          <img src="images/weather.jpg" class="img-fluid" alt="" />
+          <img
+            src="images/weather.jpg"
+            class="img-fluid"
+            alt="Weather app preview"
+          />
         </div>
       </div>
       <div class="row">
         <div class="col d-none d-lg-block">
-          <img src="images/dictionary.png" class="img-fluid" alt="" />
+          <img
+            src="images/dictionary.png"
+            class="img-fluid"
+            alt="Dictionary app preview"
+          />
         </div>
         <div class="col">
           <div class="project-desciption">
             <h2 class="mb-5">Dictionary App</h2>
             <p class="mb-5 text-muted">
-              Far far away, behind the word mountains, far from the countries
-              Vokalia and Consonantia, there live the blind texts. Separated
-              they live in Bookmarksgrove right at the coast of the Semantics, a
-              large language ocean. A small river named Duden flows by
+              I immersed myself in React development in SheCodes React. I used
+              my knowledge of this highly-demanded framework to build a working
+              dictionary app incorporating coding best practices, along with the
+              most popular tools and technologies.
             </p>
-            <a href="" class="btn btn-brand-outline"> Learn more </a>
+            <a href="/work.html" class="btn btn-brand-outline"> Learn more </a>
           </div>
         </div>
       </div>
       <footer>
         <div class="contact-box justify-content-between mb-5 d-none d-md-flex">
           <div>
-            <h4>Work Enquiry</h4>
+            <h3>Work Enquiry</h3>
             <p class="text-muted">Let's work together</p>
           </div>
           <div>
-            <a href="" class="btn btn-brand mt-3"> Contact me </a>
+            <a
+              href="/contact.html"
+              class="btn btn-brand mt-3"
+              title="Contact Mashudu"
+            >
+              Contact me
+            </a>
           </div>
         </div>
         <div class="d-flex justify-content-center mb-5">
-          <a href="mailto:mashudu@gmail.com" class="email-link">
+          <a
+            href="mailto:mashudu@gmail.com"
+            class="email-link"
+            title="Email Mashudu"
+          >
             mashudu@gmail.com
           </a>
         </div>
         <div class="social-links d-flex justify-content-center">
-          <a href="https://www.github.com/mashudutshifura" target="_blank">
+          <a
+            href="https://www.github.com/mashudutshifura"
+            target="_blank"
+            title="Github profile"
+          >
             <i class="fab fa-github" aria-hidden="true"></i>
           </a>
-          <a href="https://www.instagram.com/mashudu" target="_blank">
+          <a
+            href="https://www.linkedin.com/mashudu"
+            target="_blank"
+            title="Linkedin profile"
+          >
             <i class="fab fa-instagram" aria-hidden="true"></i>
           </a>
-          <a href="https://www.twitter.com/mashudu" target="_blank">
+          <a
+            href="https://www.twitter.com/mashudu"
+            target="_blank"
+            title="Twitter profile"
+          >
             <i class="fab fa-twitter" aria-hidden="true"></i>
           </a>
         </div>
+        <p class="text-center mt-5">
+          ✌️ This website was coded by Mashudu Tshifura, and is
+          <a
+            href="https://github.com/mashudutshifura/portfolio-project-responsive"
+            target="_blank"
+          >
+            open-sourced
+          </a>
+        </p>
       </footer>
     </div>
   </body>
