--- a/work.html
+++ b/work.html
@@ -25,9 +25,40 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="/styles/portfolio.css" />
-    <title>Document</title>
+     <meta name="description" content="Work details for Mashudu. Mashudu is an aspiring front-end developer based in South Africa. ">
+    <title>Work details Mashudu - Mashudu Tshifura</title>
   </head>
   <body>
+    <div class="container">
+      <nav class="d-flex justify-content-between">
+        <a href="/" title="Homepage">
+          <img
+            src="images/logo.png"
+            class="logo d-none d-md-block"
+            alt="Mashudu Logo"
+          />
+          <img
+            src="images/logo-small.jpg"
+            class="logo d-block d-md-none"
+            alt="Mashudu Logo"
+          />
+        </a>
+        <ul>
+          <li>
+            <a href="/" title="Homepage"> Home</a>
+          </li>
+          <li>
+            <a href="/about.html" title="About Mashudu"> About</a>
+          </li>
+          <li class="active">
+            <a href="/work.html" title="Mashudu's work"> Work</a>
+          </li>
+          <li>
+            <a href="/contact.html" title="Contact Mashudu"> Contact</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
     <div class="content-page container">
       <div class="content">
         <h1 class="mb-5">Take a look at my work!</h1>
@@ -37,46 +68,106 @@
             <img
               src="images/yogurt.png"
               class="img-fluid mb-3 rounded"
-              alt=""
+              alt="Yogurt project preview"
             />
             <h3 class="text-center m-0">Yogurt Project</h3>
-            <p class="text-center text-muted">Built with HTML and CSS</p>
+            <p class="text-center text-muted">
+              Built with HTML, CSS and Javascript
+            </p>
           </div>
           <div class="col-md-6 mb-4">
             <img
               src="images/weather.jpg"
               class="img-fluid mb-3 rounded"
-              alt=""
+              alt="Weather app preview"
             />
             <h3 class="text-center m-0">Weather Project</h3>
             <p class="text-center text-muted">
-              Built with HTML, CSS and JavaScript
+              Built using HTML, an active API, and advanced CSS and JavaScript
             </p>
           </div>
           <div class="col-md-6 mb-4">
             <img
               src="images/dictionary.png"
               class="img-fluid mb-3 rounded"
-              alt=""
+              alt="Dictionary app preview"
             />
             <h3 class="text-center m-0">Dictionary App</h3>
             <p class="text-center text-muted">
-              Built with HTML, CSS with React
+              Built using HTML, an active API, advanced CSS, and React
             </p>
           </div>
           <div class="col-md-6 mb-4">
             <img
               src="images/translation.png"
               class="img-fluid mb-3 rounded"
-              alt=""
+              alt="Translation app preview"
             />
             <h3 class="text-center m-0">Translation App</h3>
             <p class="text-center text-muted">
-              Built with HTML, CSS with React
+              Built using HTML, an active API, advanced CSS, and React
             </p>
           </div>
         </div>
       </div>
     </div>
+    <footer class="container">
+      <div class="contact-box justify-content-between mb-5 d-none d-md-flex">
+        <div>
+          <h3>Work Enquiry</h3>
+          <p class="text-muted">Let's work together</p>
+        </div>
+        <div>
+          <a
+            href="/contact.html"
+            class="btn btn-brand mt-3"
+            title="Contact Mashudu"
+          >
+            Contact me
+          </a>
+        </div>
+      </div>
+      <div class="d-flex justify-content-center mb-5">
+        <a
+          href="mailto:mashudu@gmail.com"
+          class="email-link"
+          title="Email Mashudu"
+        >
+          mashudu@gmail.com
+        </a>
+      </div>
+      <div class="social-links d-flex justify-content-center">
+        <a
+          href="https://www.github.com/mashudutshifura"
+          target="_blank"
+          title="Github profile"
+        >
+          <i class="fab fa-github" aria-hidden="true"></i>
+        </a>
+        <a
+          href="https://www.linkedin.com/mashudu"
+          target="_blank"
+          title="Linkedin profile"
+        >
+          <i class="fab fa-instagram" aria-hidden="true"></i>
+        </a>
+        <a
+          href="https://www.twitter.com/mashudu"
+          target="_blank"
+          title="Twitter profile"
+        >
+          <i class="fab fa-twitter" aria-hidden="true"></i>
+        </a>
+      </div>
+      <p class="text-center mt-5">
+        ✌️ This website was coded by Mashudu Tshifura, and is
+        <a
+          href="https://github.com/mashudutshifura/portfolio-project-responsive"
+          target="_blank"
+        >
+          open-sourced
+        </a>
+      </p>
+    </footer>
   </body>
 </html>
